--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,7 @@
 .main-header-div {
-  position: flex;
-  left: 0;
-  top: 0;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   width: 100%;
   height: 60px;
   background-color: #2d2d2d;
@@ -17,4 +17,9 @@
   background: url(src/assets/logo.PNG) no-repeat;
   background-size: cover;
   display: flex;
+}
+.links-div {
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
 }
