Add filter cars ability - without models

--- a/src/app/components/combobox/combobox.component.css
+++ b/src/app/components/combobox/combobox.component.css
@@ -14,9 +14,12 @@
 }
 .combobox-label {
   display: flex;
+  align-items: center;
   height: 30px;
   width: 170px;
   background-color: rgb(73, 73, 75);
+  color: white;
+  font-size: 17px;
 }
 .options-div {
   display: flex;
