--- a/src/app/components/filter-form/filter-form.component.css
+++ b/src/app/components/filter-form/filter-form.component.css
@@ -8,9 +8,10 @@
   border-width: 1px;
   border-radius: 5%;
   border-style: groove;
-  justify-content: space-between;
+  justify-content: flex-start;
 }
 .horizntal-div {
+  margin-top: 20px;
   width: 400px;
   display: flex;
   align-items: flex-start;
